Add config, refresh README, require Java 21
Add a new .config.ini with default runtime flags (early=0, auto_run=0, ignore=0). Overhaul README.md with a complete rewrite: new badges, clearer prerequisites, installation/run instructions, troubleshooting, and project structure. Update run.sh to parse the Java major version and exit with a helpful message if Java < 21 (recommend Temurin/Homebrew or Adoptium); also remove an unused --add-opens line and the -noverify flag from the java invocation. Update loader.jar (binary changes) as part of this set of updates.